--- a/client/src/components/Register.scss
+++ b/client/src/components/Register.scss
@@ -44,6 +44,32 @@ $green: #07ad90;
           transition: all ease-in 0.25s;
           color: lighten($text-dark, 20%);
         }
+
+        .button{
+          -webkit-appearance: none;
+          appearance: none;
+          &:focus{
+            outline: none;
+          }
+          -webkit-appearance: none;
+          appearance: none;
+          cursor: pointer;
+          width: 100%;
+          background: $green;
+          line-height: 2em;
+          color: $text-light;
+          border: 1px solid $green;
+          border-radius: $br;
+          padding: $spacing/4;
+          
+          &:hover{
+            opacity: 0.9;
+          }
+          &:active{
+            transform: scale(0.96);
+          }
+        }
+
         input[type="text"], input[type="password"], input[type="submit"], textarea{
           -webkit-appearance: none;
           appearance: none;
